[gd_scene load_steps=4 format=3 uid="uid://cpgiyqc8s3e7o"]

[ext_resource type="PackedScene" uid="uid://bes6kt2gocxop" path="res://scenes/bots/builder_item.tscn" id="1_6yotc"]
[ext_resource type="Theme" uid="uid://dx7xs6c0v4ixh" path="res://scenes/menu.tres" id="1_e5pmf"]
[ext_resource type="Script" uid="uid://btfp0gbu4h5or" path="res://scenes/bots/bot_item_select.gd" id="2_lrsfk"]

[node name="ItemSelect" type="Panel"]
offset_left = 40.0
offset_top = 24.0
offset_right = 376.0
offset_bottom = 312.0
theme = ExtResource("1_e5pmf")
script = ExtResource("2_lrsfk")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 288.0
offset_bottom = 48.0
text = "Select an upgrade"

[node name="Item1" parent="." instance=ExtResource("1_6yotc")]
layout_mode = 0
offset_left = 72.0
offset_top = 64.0
offset_right = 122.0
offset_bottom = 114.0

[node name="Item2" parent="." instance=ExtResource("1_6yotc")]
layout_mode = 0
offset_left = 72.0
offset_top = 128.0
offset_right = 122.0
offset_bottom = 178.0

[node name="Item3" parent="." instance=ExtResource("1_6yotc")]
layout_mode = 0
offset_left = 72.0
offset_top = 192.0
offset_right = 122.0
offset_bottom = 242.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 232.0
offset_right = 312.0
offset_bottom = 272.0
text = "Ok"

[connection signal="selected" from="Item1" to="." method="_on_item_selected"]
[connection signal="selected" from="Item2" to="." method="_on_item_selected"]
[connection signal="selected" from="Item3" to="." method="_on_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
